Fix fields uneven width;package-lock.json changed

--- a/frontend/src/components/SettingsPage/SettingsPage.module.css
+++ b/frontend/src/components/SettingsPage/SettingsPage.module.css
@@ -7,9 +7,8 @@
 .field {
   border-radius: 25px;
   box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
-  height: 1vh;
+  height: 35px;
   width: 30vw;
-  /* margin-bottom: 15px; */
   padding: 2vh;
   background-color: white;
   margin: 0px;
@@ -38,23 +37,6 @@
   border-color: #aaa;
 }
 
-/* @media screen and (max-width: 1000px) {
-  .field {
-    width: 50%;
-  }
-}
-
-@media screen and (max-width: 999px) and (min-width: 600px) {
-  .field {
-    width: 60%;
-  }
-}
-
-@media screen and (max-width: 499px) and (min-width: 400px) {
-  .field {
-    width: 80%;
-  }
-} */
 
 /* Wardrobe*/
 
